added smoothscroll and dynamic date

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 </div>
                 <ul class="navbar__list">
                     <li class="navbar__item">
-                        <a href="#" class="navbar__link">Home</a>
+                        <a id = "home" href="#" class="navbar__link">Home</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="#" class="navbar__link">Cameras</a>
+                        <a id = "cameras" href="#" class="navbar__link">Cameras</a>
                     </li>
-                    <li class="navbar__item">
+                    <li id = "apply" class="navbar__item">
                         <a href="#" class="navbar__link">Apply</a>
                     </li>
                 </ul>
@@ -36,7 +36,7 @@
             <h1 class="heading-primary">
                 <span class="heading-primary--main">Snap</span>
                 <span class="heading-primary--sub">Through the eye of photography</span>
-                <a href="#" class="btn btn--white btn--animate">See our photos</a>
+                <a href="#" id = "jumbotron-btn" class="btn btn--white btn--animate">See our photos</a>
             </h1>
         </div>
     </div>
@@ -269,7 +269,7 @@
                 </li>
             </ul>
             <p class="footer__copyright">Created by
-                <a href="#" class="footer__link">Ifrim Dragos Cosmin.</a> Copyright &copy; by Ifrim Cosmin </p>
+                <a href="#" class="footer__link"> &copy; Ifrim Dragos Cosmin <span id="span-date"></span> All rights reserved.   </p>
         </div>
     </footer>
 
